@@ -272,7 +272,7 @@ public interface BukkitMapPersister {
 
     @NotNull
     private static World getDefaultMapWorld() {
-        final World world = Bukkit.getWorlds().getFirst();
+        final World world = Bukkit.getWorlds().get(0);
         if (world == null) {
             throw new IllegalStateException("No worlds are loaded on the server!");
         }
@@ -352,7 +352,7 @@ public interface BukkitMapPersister {
     /**
      * A {@link MapCanvas} implementation used for pre-rendering maps to be converted into {@link MapData}
      */
-    @SuppressWarnings("deprecation")
+    @SuppressWarnings({"deprecation", "removal"})
     class PersistentMapCanvas implements MapCanvas {
 
         private final int mapDataVersion;
@@ -447,7 +447,11 @@ public interface BukkitMapPersister {
             final String BANNER_PREFIX = "banner_";
             for (int i = 0; i < getCursors().size(); i++) {
                 final MapCursor cursor = getCursors().getCursor(i);
+                //#if MC==12001
+                //$$ final String type = cursor.getType().name().toLowerCase(Locale.ENGLISH);
+                //#else
                 final String type = cursor.getType().getKey().getKey();
+                //#endif
                 if (type.startsWith(BANNER_PREFIX)) {
                     banners.add(new MapBanner(
                             type.replaceAll(BANNER_PREFIX, ""),
